changed API endpoints to be compatible with Swagger/Azure

--- a/WeightLog/appsettings.json
+++ b/WeightLog/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "Project": "Server=.\\SQLEXPRESS;Database=weight_log;Trusted_Connection=True;"
+    //"Project": "Server=.\\SQLEXPRESS;Database=weight_log;Trusted_Connection=True;"
+    "Project": "Server=tcp:weightlogserver.database.windows.net,1433;Initial Catalog=weightlog;Persist Security Info=False;User ID=claygilk;Password=Falseazure!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
